--- a/Facilities Location and Layout Design/Description
+++ b/Facilities Location and Layout Design/Description
@@ -1,1 +1,12 @@
 About
+
+Software need:
+  Matlab, Python
+  
+#Practise 01:
+  روش پله ای یا متعامد
+  با نرم افزار متلب
+  
+#Practise 02: 
+  روش مجذور اقلیدوسی
+  با نرم افزار متلب
