--- a/Facilities Location and Layout Design/Description
+++ b/Facilities Location and Layout Design/Description
@@ -3,10 +3,10 @@ About
 Software need:
   Matlab, Python
   
-#Practise 01:
+#Practice 01:
   روش پله ای یا متعامد
   با نرم افزار متلب
   
-#Practise 02: 
+#Practice 02: 
   روش مجذور اقلیدوسی
   با نرم افزار متلب
