--- a/IP/Description
+++ b/IP/Description
@@ -2,10 +2,10 @@ Software Need:
   GAMS, Lingo, Lindo, C, CPP, Python, Matlab.
 
 
-#Practise 01:
+#Practice 01:
   مدل اول مساله رنگ آمیزی نقشه
   با نرم افزار گمز
   
-#Practise 02:
+#Practice 02:
   مدل دوم مساله رنگ آمیزی نقشه
   با نرم افزار گمز
